enum Color {
  White,
  Black,
}

export default Color;
