enum GameStatus {
  InProgress,
  Checkmate,
  Stalemate,
  Forfeiture,
  Resigned,
}

export default GameStatus;
