export default abstract class Log {
}
